first production release

--- a/views/pages/admin-add-batch.ejs
+++ b/views/pages/admin-add-batch.ejs
@@ -1,91 +1,123 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title>Add Batch | Admin | Codeshala | Get Better At Programing By Joining The Best programing courses in Delhi NCR</title> 
-	<% include ../partials/header %>
-	<% include ../partials/metadata %>
+    <title>
+        <% if(batch){ %>
+        Edit Batch Details
+        <% }else{ %>
+        Add Batch
+        <% } %>
+        | Admin | Codeshala | Get Better At Programing By Joining The Best programing courses in Delhi NCR</title>
+    <% include ../partials/header %>
+    <% include ../partials/metadata %>
 </head>
 <body>
-	<% include ../partials/nav %>
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-3">
-				<% include ../partials/admin-menu %>
-			</div>
-			<div class="col-lg-9">
-				<nav aria-label="breadcrumb">
-					<ol class="breadcrumb">
-						<li class="breadcrumb-item"><a href="/admin">Admin Home</a></li>
-						<li class="breadcrumb-item"><a href="/admin/batchs/add">Add Batch</a></li>
-					</ol>
-				</nav>
-				<br/>
-				<div class="card">
-					<div class="card-header">
-						Add New Course
-					</div>
-					<div class="card-body">
-						<form method="post" action="/admin/batchs/add">
-							<div class="form-group">
-								<label for="formGroupExampleInput">Course Name</label>
-								<input type="text" name="name" class="form-control" id="formGroupExampleInput" placeholder="e.g. Full Stack Web Development Using Node.JS">
-							</div>
-							<div class="form-group">
-								<label for="formGroupExampleInput2">Minimum Sessions</label>
-								<input type="text" name="minsessions" class="form-control" id="formGroupExampleInput2" placeholder="e.g. 16">
-							</div>
-							<div class="form-group">
-								<label for="formGroupExampleInput2">Maximum Sessions</label>
-								<input type="text" name="maxsessions" class="form-control" id="formGroupExampleInput2" placeholder="e.g. 21">
-							</div>
-							<div class="form-group">
-								<label for="formGroupExampleInput2">Course Fees</label>
-								<input type="text" name="fees" class="form-control" id="formGroupExampleInput2" placeholder="e.g. INR 8000">
-							</div>
-							<div class="form-group">
-								<label for="formGroupExampleInput2">Number Of Seats</label>
-								<input type="text" name="seats" class="form-control" id="formGroupExampleInput2" placeholder="e.g. 20">
-							</div>
-							<div class="form-group">
-								<label for="formGroupExampleInput2">Short Description (40-45 Words)</label>
-								<input type="text" name="description" class="form-control" id="formGroupExampleInput2" placeholder="Short Description">
-							</div>
-							<div class="form-group">
-								<label for="formGroupExampleInput">Course Curriculum (Use &lt;li&gt; Tags)</label>
-								<textarea class="form-control" name="course-curriculum" id="formGroupExampleInput" placeholder="Course Curriculum"></textarea>
-							</div>
-							<div class="form-group">
-								<label for="formGroupExampleInput">Course Projects (Use &lt;li&gt; Tags)</label>
-								<textarea class="form-control" name="course-projects" id="formGroupExampleInput" placeholder="Course Projects"></textarea>
-							</div>
-							<div class="form-group">
-							<label for="formGroupExampleInput2">Course Scope</label><br/>
-							<select class="custom-select" name="course-scope">
-								<option value="OPEN">Open For All To Register</option>
-								<option value="LINK">Open For Ones With Link</option>
-								<option value="PRIVATE">Open For Selected People</option>
-							</select>
-							</div>
-							<div class="form-group">
-							<label for="formGroupExampleInput2">Registration Status</label><br/>
-							<select class="custom-select" name="course-registration-status">
-								<option value="OPEN">Open For Registration</option>
-								<option value="CLOSED">Closed For Registration</option>
-							</select>
-							</div>
-							
-							<div class="form-group">
-								<label for="formGroupExampleInput2">Course Alias</label>
-								<input type="text" name="alias" class="form-control" id="formGroupExampleInput2" placeholder="Course Alias">
-							</div>
-							<input type="submit" class="btn btn-primary" value="Add Course">
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<% include ../partials/footer %>
+<% include ../partials/nav %>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-3">
+            <% include ../partials/admin-menu %>
+        </div>
+        <div class="col-lg-9">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="/admin">Admin Home</a></li>
+                    <li class="breadcrumb-item"><a href="/admin/batch">All Batches</a></li>
+                    <% if(batch){ %>
+                    <li class="breadcrumb-item"><a href="">Edit Batch</a></li>
+                    <% }else{ %>
+                    <li class="breadcrumb-item"><a href="/admin/batch/add">Add Batch</a></li>
+                    <% } %>
+                </ol>
+            </nav>
+            <br/>
+            <div class="card">
+                <div class="card-header">
+                    <% if(batch){ %>
+                    Edit Batch Details
+                    <% }else{ %>
+                    Add New Batch
+                    <% } %>
+                </div>
+                <div class="card-body">
+                    <% if (response) { %>
+                    <div class="alert alert-info alert-dismissible fade show" role="alert">
+                        <p><%= response %></p>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <% } %>
+
+                    <% if(batch){ %>
+                    <form method="post" action="/admin/batch/update/<%= batch._id %>">
+                        <% }else{ %>
+                        <form method="post" action="/admin/batch/add">
+                            <% } %>
+
+                            <div class="form-group">
+                                <label for="formGroupExampleInput2">Course</label>
+                                <% if(batch){ %>
+                                <input type="text" class="form-control" value="<%= batch.course_alias %>" readonly>
+                                <% }else{ %>
+                                <select name="course_alias" class="form-control">
+                                    <% for(index in course){ %>
+                                    <option value="<%= course[index].alias %>"><%= course[index].name %></option>
+                                    <% } %>
+                                </select>
+                                <% } %>
+                            </div>
+                            <div class="form-group">
+                                <label for="formGroupExampleInput2">Start Date</label>
+                                <input type="date" class="form-control" name="start_date"
+                                       <% if(batch){ %>value="<%= batch.start_date %>"
+                                        <% } %>
+                                >
+                            </div>
+
+                            <div class="form-group">
+                                <label for="formGroupExampleInput2">End Date</label>
+                                <input type="date" class="form-control" name="end_date"
+                                       <% if(batch){ %>value="<%= batch.end_date %>"
+                                        <% } %>
+                                >
+                            </div>
+
+                            <div class="form-group">
+                                <label for="formGroupExampleInput2">Venue</label><br/>
+                                <select name="venue" class="form-control">
+                                    <% for(index in venue){
+                                    if(venue[index].name == batch.venue){
+                                    %>
+                                    <option value="<%= venue[index].name %>" selected><%= venue[index].name %></option>
+
+                                    <% } else{ %>
+                                    <option value="<%= venue[index].name %>"><%= venue[index].name %></option>
+                                    <% } %>
+                                    <% } %>
+                                </select>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="formGroupExampleInput2">Intake</label>
+                                <input type="text" name="intake" class="form-control" id="formGroupExampleInput2"
+                                       placeholder="e.g. 20" <% if(batch){ %>value="<%= batch.intake %>"
+                                <% } %>>
+                            </div>
+                            <br/>
+                            <% if(batch){ %>
+                            <input type="submit" class="btn btn-primary" value="Update Batch">
+                            <% }else{ %>
+                            <input type="submit" class="btn btn-primary" value="Start Batch">
+                            <% } %>
+
+                        </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<% include ../partials/footer %>
 </body>
 
 <% include ../partials/footer-scripts %>
