--- a/views/partials/admin-menu.ejs
+++ b/views/partials/admin-menu.ejs
@@ -1,12 +1,32 @@
-				<ul class="list-group">
-					<a href="/admin"><li class="list-group-item">Admin Home</li></a>
-					<a href="/admin/courses"><li class="list-group-item">View All Courses</li></a>
-					<a href="/admin/courses/add"><li class="list-group-item">Add Course</li></a>
-					<a href="/admin/courses/edit"><li class="list-group-item">Edit Course</li></a>
-					<a href="/admin/courses/delete"><li class="list-group-item">Delete Course</li></a>
-					<a href="/admin/batch"><li class="list-group-item">View All Batches</li></a>
-					<a href="/admin/batch/add"><li class="list-group-item">Create New Batch</li></a>
-					<a href="/admin/registrations"><li class="list-group-item">View All Users</li></a>
-					<a href="/admin/payments"><li class="list-group-item">Payments</li></a>
-					<a href="/admin/feedbacks"><li class="list-group-item">Feedbacks</li></a>
-				</ul>
+<ul class="list-group">
+    <a href="/admin">
+        <li class="list-group-item">Admin Home</li>
+    </a>
+    <a href="/admin/courses">
+        <li class="list-group-item">View All Courses</li>
+    </a>
+    <a href="/admin/courses/add">
+        <li class="list-group-item">Add Course</li>
+    </a>
+    <a href="/admin/batch">
+        <li class="list-group-item">View All Batches</li>
+    </a>
+    <a href="/admin/batch/add">
+        <li class="list-group-item">Create New Batch</li>
+    </a>
+    <a href="/admin/registrations">
+        <li class="list-group-item">View All Users</li>
+    </a>
+    <a href="/admin/venue/add">
+        <li class="list-group-item">Add new branch</li>
+    </a>
+    <a href="/admin/payments">
+        <li class="list-group-item">Payments</li>
+    </a>
+    <a href="/admin/feedbacks">
+        <li class="list-group-item">Feedbacks</li>
+    </a>
+    <a href="/logout">
+        <li class="list-group-item">Logout</li>
+    </a>
+</ul>
