--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,99 +1,108 @@
-	<footer class="container-fluid">
-	<div class="container" style="margin-top:10px;margin-bottom:10px;">
-		<div class="row">
-			<div class="col-lg-8" style="valign:top;">
-				<div class="row">
-					<div class="col-lg-2 text-left">
-						<h3 class="footer-links-title">COMPANY</h3>
-						<ul class="footer-links">
-							<li>
-								<a href="#">About</a>
-							</li>
-							<li>
-								<a href="#">Mentors</a>
-							</li>
-							<li>
-								<a href="#">Projects</a>
-							</li>
-							<li>
-								<a href="#">Events</a>
-							</li>
-							<li>
-								<a href="#">Contact Us</a>
-							</li>
-							<li>
-								<a href="https://github.com/CodeShala" target="new">Github</a>
-							</li>
-						</ul>
-					</div>
-					<div class="col-lg-4 text-left">
-						<h3 class="footer-links-title">COURSES</h3>
-						<ul class="footer-links">
-							<li>
-								<a href="#">Full stack web development using Node.Js</a>
-							</li>
-							<li>
-								<a href="#">Introduction to programing using C++</a>
-							</li>
-							<li>
-								<a href="#">Data Structures & Algorithms - 1 </a>
-							</li>
-							<li>
-								<a href="#">Data Structures & Algorithms - 2 </a>
-							</li>
-							<li>
-								<a href="#">Interview Prepration </a>
-							</li>
-						</ul>
-					</div>
-					<div class="col-lg-3 text-left">
-						<h3 class="footer-links-title">RESOURCES</h3>
-						<ul class="footer-links">
-							<li>
-								<a href="#">Coding Assignments</a>
-							</li>
-							<li>
-								<a href="#">Coding Contests</a>
-							</li>
-							<li>
-								<a href="#">Question of the day</a>
-							</li>
-							<li>
-								<a href="#">Web development Assignments</a>
-							</li>
-							<li>
-								<a href="#">IDE</a>
-							</li>
-							<li>
-								<a href="#">Forum</a>
-							</li>
-						</ul>
-					</div>
-					<div class="col-lg-3 text-left">
-						<h3 class="footer-links-title">SOCIAL</h3>
-						<ul class="footer-links">
-							<li>
-								<a href="#">Facebook Page</a>
-							</li>
-							<li>
-								<a href="#">Facebook Group</a>
-							</li>
-							<li>
-								<a href="#">Telegram Group</a>
-							</li>
-						</ul>
-					</div>
-					
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<img class="codeshala-logo" src="/assets/images/site_logo.png"><br/>
-				GET BETTER AT PROGRAMING<br/><br/>
-				&copy; HoneyByte 2018<br/>
-				<a href="" style="color:#7f7f7f;">T&C</a> | <a href="" style="color:#7f7f7f;">Privacy policy</a> 
-			</div>
-		</div>
-		<hr/ style="background-color:#262626;height:2px;">
-		<p class="text-left">We are community of programmers. Our community is lead by professionals who have broad experience in competitve programming and software development. Our community mentors are working at top companies and providing mentorship to candidates across different colleges. We provide learning courses to make you a better programmer.</p>
-		</div>
-	</footer>
+<footer class="container-fluid">
+    <div class="container" style="margin-top:10px;margin-bottom:10px;">
+        <div class="row">
+            <div class="col-lg-8" style="valign:top;">
+                <div class="row">
+                    <div class="col-lg-2 text-left">
+                        <h3 class="footer-links-title">COMPANY</h3>
+                        <ul class="footer-links">
+                            <li>
+                                <a href="/#about">About</a>
+                            </li>
+                            <li>
+                                <a href="/#mentors">Mentors</a>
+                            </li>
+                            <li>
+                                <a href="/#projects">Projects</a>
+                            </li>
+                            <!--<li>
+                                <a href="#">Events</a>
+                            </li>-->
+                            <li>
+                                <a href="/#footer">Contact Us</a>
+                            </li>
+                            <li>
+                                <a href="/privacy">Privacy Policy</a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/CodeShala" target="new">Github</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-4 text-left">
+                        <h3 class="footer-links-title">COURSES</h3>
+                        <ul class="footer-links">
+                            <li>
+                                <a href="/course/full-stack-web-development-using-node-js">Full stack web development
+                                    using Node.Js</a>
+                            </li>
+                            <li>
+                                <a href="/course/introduction-to-programing-using-cpp">Introduction to programing using
+                                    C++</a>
+                            </li>
+                            <li>
+                                <a href="/course/data-structures-algorithms-1">Data Structures & Algorithms - 1 </a>
+                            </li>
+                            <li>
+                                <a href="/course/data-structures-algorithms-2">Data Structures & Algorithms - 2 </a>
+                            </li>
+                            <li>
+                                <a href="/course/coding-interview-prepration">Interview Prepration </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3 text-left">
+                        <h3 class="footer-links-title">RESOURCES</h3>
+                        <ul class="footer-links">
+                            <li>
+                                <a href="#/assignments">Coding Assignments</a>
+                            </li>
+                            <li>
+                                <a href="/contests">Coding Contests</a>
+                            </li>
+                            <li>
+                                <a href="/contests">Question of the day</a>
+                            </li>
+                            <li>
+                                <a href="/assignments">Web development Assignments</a>
+                            </li>
+                            <li>
+                                <a href="/ide">IDE</a>
+                            </li>
+                            <!--<li>
+                                <a href="#">Forum</a>
+                            </li>-->
+                        </ul>
+                    </div>
+                    <div class="col-lg-3 text-left">
+                        <h3 class="footer-links-title">SOCIAL</h3>
+                        <ul class="footer-links">
+                            <li>
+                                <a href="https://www.facebook.com/CodeshalaOrg">Facebook Page</a>
+                            </li>
+                            <li>
+                                <a href="https://www.facebook.com/CodeshalaOrg/posts">Facebook Group</a>
+                            </li>
+                            <li>
+                                <a href="#">Telegram Group</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <img class="codeshala-logo" src="/assets/images/site_logo.png"><br/>
+                GET BETTER AT PROGRAMING<br/><br/>
+                &copy; HoneyByte 2018<br/>
+                <a href="/privacy" style="color:#7f7f7f;">T&C</a> | <a href="/privacy" style="color:#7f7f7f;">Privacy
+                    policy</a>
+            </div>
+        </div>
+        <hr style="background-color:#262626;height:2px;">
+        <p class="text-left">We are community of programmers. Our community is lead by professionals who have broad
+            experience in competitve programming and software development. Our community mentors are working at top
+            companies and providing mentorship to candidates across different colleges. We provide learning courses to
+            make you a better programmer.</p>
+    </div>
+</footer>
