--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,33 +1,35 @@
-	<nav class="navbar navbar-expand-lg">
-	<a class="navbar-brand" href="/">
-	<img class="codeshala-logo" src="/assets/images/site_logo.png">
-	</a>
-	<button class="navbar-toggler bg-dark navbar-dark" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	<span class="navbar-toggler-icon"></span>
-	</button>
-	<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-	<ul class="navbar-nav justify-content-end">
-	<li class="nav-item active">
-	<a class="nav-link" href="">Home <span class="sr-only">(current)</span></a>
-	</li>
-	<li class="nav-item active">
-	<a class="nav-link" href="/assignments">Assignments</a>
-	</li>
-	<li class="nav-item active">
-	<a class="nav-link" href="/contests">Contests</a>
-	</li>
-	<li class="nav-item active">
-	<a class="nav-link" href="/ide">IDE</a>
-	</li>
-	<li class="nav-item active">
-	<a class="nav-link" href="/forum">Forum</a>
-	</li>
-	<li class="nav-item active">
-	<a class="nav-link" href="/blog">Blog</a>
-	</li>
-	<li class="nav-item active">
-	<a class="nav-link" href="/events">Events</a>
-	</li>
-	</ul>
-	</div>
-	</nav>
+<nav class="navbar navbar-expand-lg">
+    <a class="navbar-brand" href="/">
+        <img class="codeshala-logo" src="/assets/images/site_logo.png">
+    </a>
+    <button class="navbar-toggler bg-dark navbar-dark" type="button" data-toggle="collapse"
+            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <ul class="navbar-nav justify-content-end">
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/assignments">Assignments</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/contests">Contests</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/ide">IDE</a>
+            </li>
+            <!--<li class="nav-item active">
+            <a class="nav-link" href="/forum">Forum</a>
+            </li>
+            <li class="nav-item active">
+            <a class="nav-link" href="/blog">Blog</a>
+            </li>
+            <li class="nav-item active">
+            <a class="nav-link" href="/events">Events</a>
+            </li>-->
+        </ul>
+    </div>
+</nav>
